# sentc-rust

./: .env.sample  .gitignore  Cargo.toml  README.md
sentc/: Cargo.toml
sentc-light/: Cargo.toml
sentc-light/src/: error.rs  lib.rs  net_helper.rs
sentc-light/src/cache/: l_one.rs  mod.rs
sentc-light/src/group/: export.rs  mod.rs  net.rs
sentc-light/src/sentc/: mod.rs  net.rs
sentc-light/src/user/: export.rs  mod.rs  net.rs
sentc-light/tests/: tests_1_user.rs  tests_2_user.rs  tests_3_group.rs  tests_3_group_2.rs
sentc/doc/: backend-only.md  create-app.md  encrypt_group.md  encrypt_user.md  end-to-end-encrypted-database.md  file.md  group.md  protocol.md  searchable.md  self-hosted.md  sortable.md  user.md
sentc/src/: error.rs  lib.rs  net_helper.rs
sentc/src/cache/: l_one.rs
sentc/src/file/: downloader_net.rs  mod.rs  uploader_net.rs
sentc/src/group/: crypto_net.rs  crypto_sync.rs  ear.rs  export.rs  mod.rs  net.rs
sentc/src/group/file/: file_net.rs  mod.rs
sentc/src/keys/: fips.rs  rec.rs  std.rs
sentc/src/sentc/: mod.rs  net.rs
sentc/src/user/: crypto_net.rs  crypto_sync.rs  export.rs  mod.rs  net.rs
sentc/src/user/file/: file_net.rs  mod.rs
sentc/tests/: test_mod.rs  tests_1_user.rs  tests_2_user.rs  tests_3_group.rs  tests_3_group_2.rs  tests_4_searchable.rs  tests_5_sortable.rs  tests_6_file.rs  tests_6_file_user.rs
src/: lib.rs
