[package]
name = "sentc-light"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
description = "Sentc light version with user and group management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "Cargo.toml",
    "LICENSE",
    "src/**/*",
]

[dependencies]
sentc-crypto-light = { workspace = true }

# json handling
serde_json.workspace = true
serde.workspace = true

tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["sync", "test-util", "macros", "tokio-macros"], default-features = false }
totp-rs = "5.0"

[features]
network = ["sentc-crypto-light/full_rustls", "tokio"]