[package]
name = "sentc"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "Cargo.toml",
    "LICENSE",
    "src/**/*",
]

[dependencies]
sentc-crypto = {workspace=true, features = ["rust"]}

# json handling
serde_json.workspace = true
serde.workspace = true

# network dependencies
sentc-crypto-full = {workspace = true, optional=true}

tokio = {workspace=true, optional=true}

[dev-dependencies]
tokio = {version = "1.32.0", features = ["sync", "test-util", "macros", "tokio-macros"], default-features = false}
totp-rs = "5.0"
dotenv = "0.15.0"

[features]
network = ["sentc-crypto-full", "tokio"]
file = ["tokio/fs"]