[package]
name = "sentc"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
description = "Encryption and group/user management sdk. Easy-to-use encryption with post quantum cryptography."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "Cargo.toml",
    "LICENSE",
    "src/**/*",
    "doc/**/*",
    "README.md"
]

[dependencies]
sentc-crypto = { workspace = true }

# json handling
serde_json.workspace = true
serde.workspace = true

tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["sync", "test-util", "macros", "tokio-macros"], default-features = false }
totp-rs = "5.0"
dotenv = "0.15.0"

[features]
network = ["sentc-crypto/full_rustls", "tokio"]
file = ["tokio/fs"]

std_keys = ["sentc-crypto/std_keys"]

fips_keys = ["sentc-crypto/fips_keys"]

rec_keys = ["sentc-crypto/rec_keys"]